# VpnBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cj.txt  cj2.txt  context.md  docker-compose.yml  list.json  page.html  page2.html  panel_login.html  pyproject.toml
app/: config.py  crypto.py  logging_config.py  main.py
app/bot/: admin_handlers.py  callbacks.py  emoji.py  filters.py  keyboards.py  middlewares.py  notify.py  router.py  states.py  texts.py  ui.py  user_handlers.py
app/db/: base.py  enums.py  models.py  repositories.py  session.py  types.py
app/migrations/: env.py
app/migrations/versions/: a7b2c3d4e5f6_add_expiry_notify_stage.py  b2f1a7c4d9e0_add_trial_used.py  c3a2b8e5f1d4_add_user_public_id.py  (+8 more)
app/services/: access.py  antishare.py  audit.py  billing.py  bind_requests.py  broadcast.py  expiry.py  health.py  ip_provider.py  panel_updater.py  payments.py  pending_updates.py  plans.py  provisioning.py  subhub_client.py  subscription_delete.py  subscription_link.py  subscriptions.py  user_reset.py  xui_client.py  xui_payloads.py  xui_updater.py
tests/: conftest.py  test_access.py  test_admin_confirm.py  test_antishare.py  test_billing.py  test_broadcast.py  test_crypto.py  test_expiry.py  test_legacy_bind.py  test_middleware_logging.py  test_payment_requests.py  test_permissions.py  test_plans.py  test_provisioning.py  test_security.py  test_subhub_client.py  test_subscription_delete.py  test_trial.py  test_ui.py  test_user_reset.py  test_users.py  test_ux.py  test_xui_client.py  test_xui_payloads.py  test_xui_updater.py
