[project]
name = "telegram-vpn-billing-bot"
version = "0.1.0"
description = "Telegram-бот для ручного подтверждения оплат и автоматического продления доступа в 3x-ui"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy==1.11.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4"]
ignore = ["B008", "UP042"]

[tool.ruff.lint.per-file-ignores]
"app/migrations/*" = ["E501", "W291", "W293"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
